--- a/Hangman/hangman.css
+++ b/Hangman/hangman.css
@@ -14,4 +14,10 @@ body {
 
 #winorlose{
     color: red;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#guesses{
+    font-family: monospace;
+    font-size: 1.5em;
 }
